added external style sheet

--- a/web_design/html_basics.html
+++ b/web_design/html_basics.html
@@ -4,7 +4,7 @@
     <title>My First HTML Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.04">
-    <!--External Syle Sheet-->
+    <!--External Style Sheet-->
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!--Internal CSS Styling -->
     <style>
