--- a/web_design/resume.html
+++ b/web_design/resume.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anthoniraj Amalanathan - Resume</title>
+    <title>Resume</title>
     <style>
+        @font-face {
+            font-family: Roboto;
+            src: url('Roboto-Regular.ttf');
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
+            /* font-family: 'Roboto'; */
             background-color: #f4f4f4;
             color: #333333;
             line-height: 1.6;
@@ -14,16 +21,11 @@
             padding: 0;
         }
 
-        main {
-            width: 95%; 
-            margin: 0 auto;
-            padding: 20px;
-        }
-
         header {
             background-color: #2c3e50;
             color: white;
             text-align: center;
+            padding: 20px;
         }
 
         header h1 {
@@ -32,19 +34,15 @@
         }
 
         header a {
-            color: white;  
-            text-decoration: none;  /* Remove underline from the link */
+            color: white;
+            text-decoration: none;
         }
 
         .intro {
             background-color: #fff;
             padding: 20px;
-            margin-top: 5px;
-        }
-
-        .intro h2 {
-            margin: 0;
-            font-size: 24px;
+            margin-top: 10px;
+            border-radius: 8px;
         }
 
         .intro img {
@@ -56,11 +54,12 @@
         .skills {
             background-color: #fff;
             padding: 20px;
-            margin-top: 5px;
+            margin-top: 10px;
+            border-radius: 8px;
         }
 
         .skills ul {
-            list-style-type: none;
+            list-style-type: circle;
             padding: 0;
         }
 
@@ -71,10 +70,11 @@
 
         footer {
             text-align: center;
+            margin-top: 10px;
         }
-
     </style>
 </head>
+
 <body>
     <header>
         <a href="https://www.example.com" target="_blank">
@@ -85,7 +85,8 @@
     <main>
         <section class="intro">
             <h2>Introduction</h2>
-            <p>Hello! I am Anthoniraj Amalanathan, a passionate web developer with a love for coding and problem-solving. I have experience in HTML, CSS, and JavaScript and am always eager to learn new technologies and improve my skills.</p>
+            <p>Hello! I am Anthoniraj Amalanathan, a passionate web developer with a love for coding and
+                problem-solving...</p>
             <img src="https://via.placeholder.com/150" alt="Anthoniraj Amalanathan">
         </section>
         <section class="skills">
@@ -102,4 +103,5 @@
         <p>&copy; 2025 Anthoniraj Amalanathan</p>
     </footer>
 </body>
+
 </html>
