--- a/web_design/resume.html
+++ b/web_design/resume.html
@@ -105,8 +105,23 @@
 
         footer {
             text-align: center;
+            background-color: #eaf4ff;
+            width: 100%;
+        }
+        footer h2 {
+            margin: 0;
+            padding: 0;
         }
 
+        footer a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        footer p {
+            margin: 0;
+            font-weight: bold;
+        }
     </style>
 </head>
 
