--- a/web_design/resume.html
+++ b/web_design/resume.html
@@ -4,50 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anthoniraj Amalanathan - Resume</title>
+    <title>Portfolio of Aditya Sharma</title>
     <style>
-        @font-face {
-            font-family: Roboto;
-            src: url('Roboto-Regular.ttf');
-        }
-
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333333;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
-        }
-
-        main {
-            width: 95%; 
-            margin: 0 auto;
-            padding: 20px;
+            line-height: 1.5;
+            background-color: #f5f5f5;
         }
 
         header {
             background-color: #eaf4ff;
             text-align: center;
+            padding: 10px;
+        }
+
+        .profile-image {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
         }
 
         header h1 {
-            margin: 0;
-            font-size: 30px;
-        }
-
-        header a {
-            color: white;  
-            text-decoration: none;  /* Remove underline from the link */
-        }
-
-        .intro {
-            background-color: #fff;
-            padding: 20px;
-            margin-top: 5px;
-        }
-
-        .intro h2 {
             margin: 0;
             font-size: 24px;
         }
@@ -56,7 +35,8 @@
             margin: 20px auto;
             padding: 20px;
             background-color: white;
-            width: 60%;
+            width: 90%;
+            max-width: 800px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -65,15 +45,18 @@
             margin-bottom: 20px;
         }
 
-        .skills {
-            background-color: #fff;
-            padding: 20px;
-            margin-top: 5px;
+        .skill {
+            display: inline-block;
+            background-color: #d0e1e2;
+            padding: 5px;
+            border-radius: 5px;
         }
 
-        .skills ul {
-            list-style-type: none;
-            padding: 0;
+        section h2 {
+            border-bottom: 2px solid #ddd;
+            padding: 5px;
+            margin-bottom: 15px;
+            background-color: #cfeee3;
         }
 
         table {
@@ -105,13 +88,15 @@
 
         footer {
             text-align: center;
+            padding: 5px;
             background-color: #eaf4ff;
-            width: 100%;
         }
+
         footer h2 {
             margin: 0;
             padding: 0;
         }
+
 
         footer a {
             color: #007bff;
@@ -132,10 +117,12 @@
     </header>
 
     <main>
-        <section class="intro">
-            <h2>Introduction</h2>
-            <p>Hello! I am Anthoniraj Amalanathan, a passionate web developer with a love for coding and problem-solving. I have experience in HTML, CSS, and JavaScript and am always eager to learn new technologies and improve my skills.</p>
-            <img src="https://via.placeholder.com/150" alt="Anthoniraj Amalanathan">
+        <section class="about">
+            <h2>About Me</h2>
+            <p>I recently graduated from VIT University with a degree in Computer Science, specializing in web
+                development. I am passionate about building responsive and user-friendly websites and applications. My
+                academic and project experiences have equipped me with a solid foundation in both front-end and back-end
+                technologies.</p>
         </section>
 
         <section class="skills">
