--- a/web_design/resume.html
+++ b/web_design/resume.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio of Aditya Sharma</title>
+    /* https://developer.mozilla.org/ */
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,17 +19,27 @@
             background-color: #eaf4ff;
             text-align: center;
             padding: 10px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            
         }
 
         .profile-image {
             width: 100px;
             height: 100px;
             border-radius: 50%;
+            display: inline-block;
+            vertical-align: middle;
         }
+        
 
         header h1 {
             margin: 0;
             font-size: 24px;
+            display: inline-block;
+            vertical-align: middle;
+            padding-left: 20px;
         }
 
         main {
@@ -90,6 +101,9 @@
             text-align: center;
             padding: 5px;
             background-color: #eaf4ff;
+            /* position: fixed;
+            width: 100%;
+            bottom: 0; */
         }
 
         footer h2 {
