--- a/web_design/positioning.html
+++ b/web_design/positioning.html
@@ -33,6 +33,7 @@
             position: sticky;
             top: 40px;
             left: 30px;
+            z-index: -1; /* Bottom Layer */
         }
     </style>
 </head>
@@ -41,7 +42,7 @@
     <h1>CSS Positioning and Display</h1>
 
     <p  id="positioned">
-        I am a block-level element. My adjacent block-level elements start on new lines below me by default.
+        Fixed: Positioned relative to the viewport, unaffected by scrolling.
     </p>
 
     <p>
