--- a/web_design/resume_positional.html
+++ b/web_design/resume_positional.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio of Aditya Sharma</title>
-    /* https://developer.mozilla.org/ */
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,6 +49,10 @@
             max-width: 800px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+            /* position: relative;
+            top: 70px;
+            z-index: -1; */
         }
 
         section {
