added positional scripts

--- a/web_design/11_resume_positional.html
+++ b/web_design/11_resume_positional.html
@@ -50,9 +50,9 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-            /* position: relative;
-            top: 70px;
-            z-index: -1; */
+            position: relative;
+            top: 110px;
+            z-index: -1;
         }
 
         section {
@@ -129,7 +129,7 @@
 
 <body>
     <header>
-        <img src="photo.png" alt="Aditya Sharma" class="profile-image">
+        <img src="../images/photo.png" alt="Aditya Sharma" class="profile-image">
         <h1>Aditya Sharma</h1>
     </header>
 
