--- a/web_design/05_positioning_static.html
+++ b/web_design/05_positioning_static.html
@@ -13,9 +13,11 @@
         Sticky: Positioned relative to the nearest scrollable ancestor, staying in view as you scroll past it.
     -->
     <style>
-        body{
+        .container{
             width: 500px;
             margin: 0 auto;
+            border: 2px solid red;
+            padding: 10px;
             /* margin-top: 0;
             margin-bottom: 0;
             margin-left: auto;
@@ -28,38 +30,33 @@
             background-color: aqua;
             border: 2px solid blue;
         }
-        #positioned{
+        #static{
+            position: static;
+            top: 20px;
+            left: 20px;
             background-color: yellow;
-            position: sticky;
-            top: 40px;
-            left: 30px;
-            z-index: -1; /* Bottom Layer */
+            border: 2px solid green;
         }
     </style>
 </head>
 
 <body>
-    <h1>CSS Positioning and Display</h1>
+    <div class="container">
+        <h1>CSS Positioning and Display</h1>
 
-    <p  id="positioned">
-        Fixed: Positioned relative to the viewport, unaffected by scrolling.
-    </p>
+        <p>
+            This is a basic block level element. The adjacent block level elements display on new lines below.
+        </p>
 
-    <p>
-        Absolute: Positioned relative to the nearest positioned ancestor (non-static).
-    </p>
+        <p id="static">
+            Static: The default positioning where elements are displayed in the normal document flow.
+        </p>
 
-    <p>
-        In CSS, top, bottom, left, and right are properties used to control the spacing, positioning, and sizing of
-        elements relative to their surrounding elements.
-    </p>
-    <p>
-        Inline elements like this and this sit on the same line as text and other inline
-        elements, as long as there's space. If there's not enough space, inline elements wrap to a new line, like
-            this example. Images and other inline elements behave the same way, for example: 
-            <!-- <img src="positioning.png" alt="positioning"> -->
-    </p>
-
+        <p>
+            In CSS, top, bottom, left, and right are properties used to control the spacing, positioning, and sizing of
+            elements relative to their surrounding elements.
+        </p>
+    </div>
 </body>
 
 </html>
