added output screenshots for html pages

--- a/web_design/02_resume_normal.html
+++ b/web_design/02_resume_normal.html
@@ -114,7 +114,7 @@
 
 <body>
     <header>
-        <img src="photo.png" alt="Aditya Sharma" class="profile-image">
+        <img src="../images/photo.png" alt="Aditya Sharma" class="profile-image">
         <h1>Aditya Sharma</h1>
     </header>
 
