--- a/web_design/11_charatcer_entity.html
+++ b/web_design/11_charatcer_entity.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character Entities Demo</title>
     <style>
-        h1{
+        h1, p {
             text-align: center;
         }
+
         table {
             border: 2px solid;
             border-collapse: collapse;
@@ -16,23 +18,24 @@
             margin: 20px auto;
             text-align: left;
         }
-        th, td {
+
+        th,
+        td {
             border: 2px solid;
             padding: 10px;
         }
+
         th {
             background-color: #f2f2f2;
         }
-        tbody tr:nth-child(even) {
-            background-color: #e8dcdc;
-        }
-        tbody tr:nth-child(odd) {
-            background-color: #ffffff;
-        }
     </style>
 </head>
+
 <body>
     <h1>HTML Character Entities Demo</h1>
+    <p>HTML character entities are special codes used to represent characters in HTML that either cannot be included
+        directly or have special meaning in HTML. They are used to ensure proper rendering of text and to avoid
+        conflicts with HTML syntax.</p>
     <table>
         <thead>
             <tr>
@@ -90,4 +93,5 @@
         </tbody>
     </table>
 </body>
+
 </html>
