added media queries template

--- a/web_design/14_media_queries.html
+++ b/web_design/14_media_queries.html
@@ -15,7 +15,10 @@
         @media (max-width: 600px) {}
 
         /* Tablet styles */
-        @media (min-width: 601px) and (max-width: 900px) {}
+        @media (min-width: 601px) and (max-width: 1024px) {}
+
+        /* Desktop styles */
+        @media (min-width: 1025px) {}
     </style>
 </head>
 
