--- a/web_design/14_media_queries.html
+++ b/web_design/14_media_queries.html
@@ -12,13 +12,31 @@
         }
 
         /* Mobile styles */
-        @media (max-width: 600px) {}
+        @media (max-width: 600px) {
+            h1{
+                background-color: rgb(196, 133, 181);   
+                color: rgb(205, 226, 14);     
+                font-size: 8px;        
+            }
+        }
 
         /* Tablet styles */
-        @media (min-width: 601px) and (max-width: 1024px) {}
+        @media (min-width: 601px) and (max-width: 1024px) {
+            h1{
+                background-color: yellow;   
+                color: black;     
+                font-size: 12px;        
+            }
+        }
 
         /* Desktop styles */
-        @media (min-width: 1025px) {}
+        @media (min-width: 1025px) {
+     
+            h1{
+                background-color: brown;   
+                color: white;             
+            }
+        }
     </style>
 </head>
 <body>
