--- a/javascript/01_js_with_html.html
+++ b/javascript/01_js_with_html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Inside HTML Page</title>
-    <script src="demo.js"></script>
+    <script src="02_demo.js"></script>
     <!-- <script>
         function processData(){
             console.log("Button clicked");
