--- a/javascript/03_html_forms_with_js.html
+++ b/javascript/03_html_forms_with_js.html
@@ -10,6 +10,7 @@
         Events - OnClick, OnChange, OnFocus, OnBlur, OnSubmit, etc.
         JS Document Object Model (DOM) - document.getElementById(), document.getElementByClassName(), etc.
         J Windows Object - alert(), confirm(), prompt(), etc.
+        Naming Conventions: snake_case, PascalCase, camelCase
     -->
 </head>
 <body>
