--- a/assessment/calculator.html
+++ b/assessment/calculator.html
@@ -6,7 +6,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <form>
+    <form id="calculatorForm">
         <input type="text" id="num1" placeholder="Enter Number-1">
         <br>
         <input type="text" id="num2" placeholder="Enter Number-2">
@@ -17,12 +17,14 @@
             <option>-</option>
         </select>
         <p>The result is: <span id="result"></span></p>
+        <button type="button" id="clearButton">Clear Form</button>
     </form>
     <script>
         let num1 = document.getElementById('num1');
         let num2 = document.getElementById('num2');
         let operator = document.getElementById('operator');
         let result = document.getElementById('result');
+        let clear = document.getElementById('clearButton');
 
         operator.addEventListener(
             'change', function(){
@@ -42,6 +44,11 @@
                 }
             }          
         );
+
+        clear.addEventListener('click', ()=>{
+            document.getElementById('calculatorForm').reset();
+        });
+
     </script>
 </body>
 </html>
